Fixed layout issues

--- a/src/App.css
+++ b/src/App.css
@@ -15,19 +15,18 @@ body {
 }
 #MainSection {
     position: fixed;
-    height: 70.6vh;
+    height: 75%;
     margin-bottom: 70px;
     width: 460px;
     /* box-shadow: 0 0 30px #f8cba6bb; */
     box-shadow: 0 0 30px #6d5542bb;
-    /* overflow-x: hidden; */
-    overflow-y: scroll;
+    /* overflow-x: hidden;
+    overflow-y: scroll; */
     /* border-radius: 15px; */
     border-top-left-radius: 30px;
     border-top-right-radius: 30px;
     /* padding-bottom: 59px; */
 }
-
 
 #sendBox {
     width: 347px;
@@ -42,34 +41,31 @@ body {
     /* box-shadow: 0 0 10px #ccb1ae inset; */
     outline: none;
     background-color: #faf2ec;
+    transition: .2s;
 }
 
-/* #sendBox:focus {
-    
-} */
+#sendBox:focus {
+    box-shadow: 0 0 5px rgba(85, 85, 85, 0.34);
+}
 
 #sendButton {
     font-size: 24px;
     text-align: center;
     box-shadow: 0 0 10px #8568517e;
-    /* box-shadow: 0 0 10px #ccb1ae; */
-    padding: 10px 12px;
-    padding-left: 10px;
+    padding: 10px 12px 10px 10px;
     margin-left: 10px;
     border-radius: 200px;
-    /* border-top-right-radius: 20px;
-    border-bottom-right-radius: 20px; */
 }
 
 #sendBoxContainer {
+    position: absolute;
+    bottom: -84px;
     display: flex;
     justify-content: center;
     background-color: #F8E2CF;
     padding: 20px;
     border-bottom-left-radius: 30px;
     border-bottom-right-radius: 30px;
-    position: fixed;
-    bottom: 10.3vh;
 }
 
 #emptyChat {
@@ -80,8 +76,7 @@ body {
 }
 #emptyChat > img {
     width: 250px;
-    border-radius: 30px;
-    border-bottom-left-radius: 0;
+    border-radius: 30px 30px 30px 0;
     box-shadow: 0 0 15px #cccccc60;
 }
 
@@ -95,8 +90,7 @@ body {
 #deletedChat > img {
     width: 250px;
     margin-bottom: 20px;
-    border-radius: 30px;
-    border-bottom-left-radius: 0;
+    border-radius: 30px 30px 30px 0;
     box-shadow: 0 0 15px #cccccc60;
 }
 
@@ -106,18 +100,12 @@ body {
     overflow-wrap: break-word;
     display: flex;
     flex-direction: column;
-    height: 97%;
+    height: 64vh;
     overflow-y: auto;
-    padding: 10px;
-    padding-left: 15px;
+    padding: 10px 10px 10px 15px;
 }
 
-/* #bubble {
-    height: fit-content;
-    width: fit-content;
-    padding: 10px;
-    border: 1px solid;
-} */
+
 .bubble {
     height: fit-content;
     width: fit-content;
@@ -140,9 +128,8 @@ body {
 
 .bubble.server {
     background: #facfb5;
-    margin: 5px;
     padding: 10px;
-    margin-left: -15px;
+    margin: 5px 5px 5px -15px;
     border-color: transparent;
     border-bottom-left-radius: 2px;
 }
@@ -222,6 +209,7 @@ body {
     right: 27px;
 }
 
+
 @media only screen and (max-width:500px) {
     #topBar {
         position: fixed;
@@ -242,10 +230,10 @@ body {
     #responseContainer {
         margin-top: 20px;
         margin-left: 15px;
-        margin-bottom: 30px;
+        height: 86vh;
     }
     .barIcon {
-        left: 0px;
+        left: 0;
     }
     #sendBoxContainer {
         border-radius: 0;
@@ -259,9 +247,7 @@ body {
     #sendButton {
         margin-left: 20px;
         margin-right: 10px;
-        padding: 11px;
-        padding-top: 10px;
-        padding-bottom: 33px;
+        padding: 10px 11px 33px;
     }
     #topButtonContainer {
         position: absolute;
@@ -272,16 +258,80 @@ body {
     }
 }
 
+@media only screen and (max-width:500px) and (max-height:1060px) {
+    #responseContainer {
+        height: 84vh;
+    }
+}
 
-/*@media only screen and (max-height:1000px), (max-width:500px) {*/
-/*    #MainSection {*/
-/*        margin-top: 135px;*/
-/*        height: 86%;*/
-/*    }*/
-/*}*/
+@media only screen and (max-width:500px) and (max-height:960px) {
+    #responseContainer {
+        height: 82vh;
+    }
+}
 
-/*@media only screen and (max-height:800px), (max-width:500px) {*/
-/*    #MainSection {*/
-/*        height: 80%;*/
-/*    }*/
-/*}*/
+@media only screen and (max-width:500px) and (max-height:870px) {
+    #responseContainer {
+        height: 80vh;
+    }
+}
+@media only screen and (max-width:500px) and (max-height:790px) {
+    #responseContainer {
+        height: 78vh;
+    }
+}
+@media only screen and (max-width:500px) and (max-height:730px) {
+    #responseContainer {
+        height: 76vh;
+    }
+}
+
+@media only screen and (max-width:500px) and (max-height:670px) {
+    #responseContainer {
+        height: 74vh;
+    }
+}
+@media only screen and (max-width:500px) and (max-height:620px) {
+    #responseContainer {
+        height: 72vh;
+    }
+}
+@media only screen and (max-width:500px) and (max-height:580px) {
+    #responseContainer {
+        height: 70vh;
+    }
+}
+
+@media only screen and (max-width:500px) and (max-height:540px) {
+    #responseContainer {
+        height: 68vh;
+    }
+}
+@media only screen and (max-width:500px) and (max-height:500px) {
+    #responseContainer {
+        height: 66vh;
+    }
+}
+
+
+@media only screen and (min-width: 500px) and (max-height: 1200px) {
+    #responseContainer {
+        height: 68vh;
+    }
+}
+
+@media only screen and (min-width: 500px) and (max-height: 1050px) {
+    #responseContainer {
+        height: 67vh;
+    }
+}
+@media only screen and (min-width: 500px) and (max-height: 900px) {
+    #responseContainer {
+        height: 63vh;
+    }
+}
+@media only screen and (min-width: 500px) and (max-height: 750px) {
+    #responseContainer {
+        height: 62vh;
+    }
+}
